# midi2

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  Makefile  README.md  SECURITY.md  idf_component.yml  library.json  library.properties  midi2.h
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml
docs/: case-study-midi1-to-ump.md
docs/wiki/: Architecture.md  CI-Message-Reference.md  Design-Decisions.md  Getting-Started.md  Hardware-Validation.md  Home.md  Integration-Guide.md  Module-Reference.md  Spec-Guide.md  UMP-Message-Reference.md
examples/: README.md  basic_usage.c
examples/BasicUsage/: BasicUsage.ino  README.md
examples/CIDiscovery/: CIDiscovery.ino  README.md
examples/atmega32u4-device-arduino/: .gitignore  README.md  atmega32u4-device-arduino.ino  boards.local.txt
examples/atmega32u4-device-arduino/src/: board.h  ci_responder.c  ci_responder.h  midi2_ci.c  midi2_ci.h  midi2_ci_msg.h  midi2_dispatch.c  midi2_dispatch.h  midi2_msg.h  midi2_proc.c  midi2_proc.h  midi2_usb.cpp  midi2_usb.h  stream_responder.c  stream_responder.h
examples/basic-usage/: README.md  basic-usage.ino
examples/ci-discovery/: README.md  ci-discovery.ino
examples/rp2350-device-freertos/: .gitignore  CMakeLists.txt  FreeRTOSConfig.h  README.md  catalog.c
examples/rp2350-device-freertos/src/: catalog.c  catalog.h  ci_responder.c  ci_responder.h  freertos_hooks.c  main.c  pipeline.c  pipeline.h  tusb_config.h  usb_descriptors.c
examples/rp2350-device-freertos/stress/: results.md  stress_ump.py
examples/rp2350-device-freertos/test/: CMakeLists.txt  test_catalog.c
examples/rpi-pico-device-zephyr/: CMakeLists.txt  README.md  app.overlay  prj.conf
examples/rpi-pico-device-zephyr/src/: main.c
examples/teensy-device-midi2/: README.md  teensy-device-midi2.ino
examples/zephyr/rpi_pico_device_midi2_showcase/: CMakeLists.txt  README.md
src/: midi2.c  midi2.h  midi2_ci.c  midi2_ci.h  midi2_ci_dispatch.c  midi2_ci_dispatch.h  midi2_ci_msg.h  midi2_conv.c  midi2_conv.h  midi2_dispatch.c  midi2_dispatch.h  midi2_msg.h  midi2_proc.c  midi2_proc.h
test/: test_midi2_amalgam.c  test_midi2_ci.c  test_midi2_ci_dispatch.c  test_midi2_ci_msg.c  test_midi2_conv.c  test_midi2_dispatch.c  test_midi2_msg.c  test_midi2_proc.c
tests/cmake-consumer/: CMakeLists.txt  main.c
tests/zephyr-consumer/: CMakeLists.txt  prj.conf
tests/zephyr-consumer/src/: main.c
tools/: amalgamate.sh
zephyr/: CMakeLists.txt  Kconfig  module.yml
